2010-03-19  Michael Albinus  <michael.albinus@gmx.de>

	Discard GNU Emacs 21 compatibility.

	* tramp.el (tramp-handle-directory-files-and-attributes)
	(tramp-get-remote-path): Use `copy-tree'.
	(tramp-set-auto-save-file-modes): Adapt version check.

	* tramp-compat.el (tramp-advice-file-expand-wildcards): No need to
	protect `featurep' call anymore.
	(tramp-compat-make-temp-file): Simplify fallback implementation.
	(tramp-compat-copy-tree): Remove function.

	* tramp-fish.el (tramp-fish-handle-directory-files-and-attributes):
	Use `tramp-compat-file-attributes'.

	* tramp-util.el (tramp-advice-dired-insert-directory): Remove advice.

2010-03-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-compute-multi-hops, tramp-maybe-open-connection): Use
	`format-spec-make'.
	(tramp-debug-outline-regexp): New defconst.
	(tramp-get-debug-buffer): Use it.

2010-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Use
	`tramp-compat-delete-directory'.

	* tramp-compat.el (tramp-compat-delete-directory): Provide
	implementation for older Emacsen.

2010-03-14  Chong Yidong  <cyd@stupidchicken.com>

	* tramp.el (tramp): Put in comm group.

	* tramp-imap.el (tramp-imap): Put in tramp group.

2010-03-14  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.18 released.

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Make call
	of `delete-directory' backwards compatible.

2010-03-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-find-executable): Use
	`tramp-get-connection-buffer'.  Make the regexp for checking
	output of "wc -l" more robust.
	(tramp-find-shell): Use another shell but /bin/sh on OpenSolaris.
	(tramp-open-connection-setup-interactive-shell): Remove workaround
	for OpenSolaris bug, it is not needed anymore.

2010-03-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix an